# RGBD-Triplet-Patched-Localization

./: .gitignore  Approaches.txt  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  README.md  calibration  corners  getIAC  main  point_cloud  rectify
Code/: AccuracyComputation.py  Detector.py  MainPipeline.py  MainPipelineCCV.py  MainPipelineDNN.py  MeanAverageAccuracy.py  ProjectObject.py  calibration.cpp  class_features.py  corners.cpp  errors.json  generate_matches.py  getIAC.cpp  main.cpp  pipeline_utils.py  point_cloud.cpp  prova.py  rectify.cpp
Code/C++/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  point_cloud
Code/accuracy_notre_dame/: rgb_out_sift_maa1.json  rgb_out_sift_maa2.json  rgb_out_sift_maa3.json  rgb_out_sift_maa4.json  rgb_out_sift_maa5.json
Code/accuracy_washington/: rgb_depth_maa1.json  rgb_depth_maa2.json  rgb_depth_maa3.json  rgb_depth_maa4.json  rgb_depth_maa5.json  rgb_out_sift_maa0.json  rgb_out_sift_maa1.json  rgb_out_sift_maa2.json  rgb_out_sift_maa3.json  rgb_out_sift_maa4.json  rgbnet_maa1.json
Code/camera/: Action.py  Camera.py  CameraObject.py  Frame.py  Recording.py  errors.json
Code/localization/: 01.matches  01_direct.matches
Code/neuralnetwork/: Autoencoder.py  Decoder.py  Encoder.py  RGBDScenesDatasetV2.py  RGBDTripletLocalizationDataset.py  RGBD_PatchEncoder.py  RGBD_TripletLocalizationDataset.py  RGBD_TripletLoss.py  RGBD_TripletMetrics.py  RGBD_TripletNetwork.py  RGBD_TripletTrainer.py  Siamese.py  main.py
Code/neuralnetwork/model/: rgb_triplet_patch_encoder_model_euclidean.pt  (+5 more)
Code/testing/: VisualizerTest.py  ae_test.py  class_features.py  cloud_points.py  data.json  dataset_path.py  extract_patch.py  extract_triplet.py  feature_detection.py  features.py  features_test.py  frame_loader_test.py  pose_test.py  pose_test_backup.py  prova.py  quaternion_point_cloud_test.py  reference.json  semantic_test.py  siamese_nb.ipynb  siamese_test.py  support.json
Code/tools/: Detector.py  Localizer.py  Matcher.py  Merger.py  SemanticRANSAC.py  SemanticSampling.py  Visualizer.py
Code/utils/: transformation_utils.py  utils.py
Dataset/NotreDame/: README.txt  list.txt
Documents/: class_diagram.drawio  diagrams.drawio
Papers/: List.txt
(+3 files in other folders)
